--- a/tomcat/alfresco-global.properties
+++ b/tomcat/alfresco-global.properties
@@ -23,16 +23,16 @@ db.username=alfresco
 db.password=alfresco
 db.name=alfresco
 db.host=localhost
-db.port=3306
-db.driver=org.gjt.mm.mysql.Driver
-db.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?useUnicode=yes&characterEncoding=UTF-8
-#db.driver=org.postgresql.Driver
-#db.port=5432
-#db.url=jdbc:postgresql://${db.host}:${db.port}/${db.name}
+#db.port=3306
+#db.driver=org.gjt.mm.mysql.Driver
+#db.url=jdbc:mysql://${db.host}:${db.port}/${db.name}?useUnicode=yes&characterEncoding=UTF-8
+db.driver=org.postgresql.Driver
+db.port=5432
+db.url=jdbc:postgresql://${db.host}:${db.port}/${db.name}
 db.pool.initial=10
 db.pool.max=90
 #mysql only
-db.pool.validate.query=select 1
+#db.pool.validate.query=select 1
 
 #
 # System paramaters
@@ -68,9 +68,9 @@ img.coders=/usr/lib/ImageMagick-6.6.9/modules-Q16/coders
 #
 # Index
 #-------------
-index.subsystem.name=lucene
+#index.subsystem.name=lucene
 index.recovery.mode=AUTO
-#index.subsystem.name=solr
+index.subsystem.name=solr
 solr.host=localhost
 solr.port=8080
 solr.port.ssl=8443
